--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
 		"dev": "nodemon ./bin/server.js"
 	},
 	"dependencies": {
+		"axios": "^0.19.0",
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.4",
 		"cors": "^2.8.5",
+		"ejs": "^2.6.2",
 		"express": "^4.17.1",
+		"http-errors": "^1.7.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.6.0",
+		"morgan": "^1.9.1",
 		"nodemon": "^1.19.1",
 		"socket.io": "^2.2.0"
 	}
